# Agentic-Ai

./: .gitignore  LICENSE  README.md  main.py
ai-research-copilot/backend/: pyproject.toml  requirements.txt
ai-research-copilot/backend/ai_research_copilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-research-copilot/backend/alembic/: env.py
ai-research-copilot/backend/alembic/versions/: 003_full_initial_schema.py  004_add_llm_requests.py  005_add_agent_platform.py  add_conversation_id_to_documents.py  add_oauth_fields.py
ai-research-copilot/backend/app/: main.py
ai-research-copilot/backend/app/agents/: __init__.py
ai-research-copilot/backend/app/agents/automation/: __init__.py  automation_agent.py
ai-research-copilot/backend/app/agents/base/: __init__.py  agent.py
ai-research-copilot/backend/app/agents/cli_agent/: __init__.py  cli_agent.py
ai-research-copilot/backend/app/agents/code_assistant/: __init__.py  code_assistant_agent.py
ai-research-copilot/backend/app/agents/critic/: __init__.py  critic_agent.py
ai-research-copilot/backend/app/agents/data_analyst/: __init__.py  data_analyst_agent.py
ai-research-copilot/backend/app/agents/document_qa/: __init__.py  document_qa_agent.py
ai-research-copilot/backend/app/agents/memory/: __init__.py  memory_agent.py
ai-research-copilot/backend/app/agents/orchestrator/: __init__.py  orchestrator.py
ai-research-copilot/backend/app/agents/planner/: __init__.py  planner.py
ai-research-copilot/backend/app/agents/research/: __init__.py  research_agent.py
ai-research-copilot/backend/app/agents/supervisor/: __init__.py  supervisor.py
ai-research-copilot/backend/app/analytics/: __init__.py
ai-research-copilot/backend/app/analytics/charts/: __init__.py  chart_generator.py
ai-research-copilot/backend/app/analytics/eda/: __init__.py  exploratory.py
ai-research-copilot/backend/app/analytics/reports/: __init__.py  report_generator.py
ai-research-copilot/backend/app/cache/: __init__.py
ai-research-copilot/backend/app/cache/redis/: cache.py
ai-research-copilot/backend/app/core/config/: __init__.py  logger.py  settings.py
ai-research-copilot/backend/app/core/exceptions/: __init__.py  exceptions.py
ai-research-copilot/backend/app/core/security/: __init__.py  auth.py  permissions.py
ai-research-copilot/backend/app/core/utils/: __init__.py  helpers.py
ai-research-copilot/backend/app/database/: base.py  session.py
ai-research-copilot/backend/app/dependencies/: __init__.py  auth.py
ai-research-copilot/backend/app/llms/: __init__.py  factory.py
ai-research-copilot/backend/app/llms/chains/: __init__.py  conversation.py
ai-research-copilot/backend/app/llms/memory/: __init__.py  chat_memory.py
ai-research-copilot/backend/app/llms/parsers/: __init__.py  json_parser.py
ai-research-copilot/backend/app/llms/prompts/: __init__.py  templates.py
ai-research-copilot/backend/app/llms/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  ollama_provider.py  openai_provider.py  opencode_provider.py
ai-research-copilot/backend/app/mcp/: __init__.py  server.py
ai-research-copilot/backend/app/mcp/client/: __init__.py  mcp_client.py
ai-research-copilot/backend/app/mcp/executors/: __init__.py  tool_executor.py
ai-research-copilot/backend/app/mcp/registry/: __init__.py  tool_registry.py
ai-research-copilot/backend/app/mcp/server/: __init__.py  main.py  mcp_server.py
ai-research-copilot/backend/app/mcp/tools/: __init__.py  builtin_tools.py  coding_tools.py
ai-research-copilot/backend/app/middleware/: __init__.py  logging.py  rate_limiting.py  security.py
ai-research-copilot/backend/app/models/: __init__.py  agent.py  analytics.py  conversation.py  document.py  llm_usage.py  user.py  workflow.py
ai-research-copilot/backend/app/monitoring/: __init__.py
ai-research-copilot/backend/app/monitoring/logging/: __init__.py  structured.py
ai-research-copilot/backend/app/monitoring/metrics/: __init__.py  prometheus.py
ai-research-copilot/backend/app/monitoring/tracing/: __init__.py  tracer.py
ai-research-copilot/backend/app/rag/: __init__.py  pipeline.py
ai-research-copilot/backend/app/rag/chunking/: __init__.py  base.py  parent_child.py  recursive.py  semantic.py
ai-research-copilot/backend/app/rag/citation/: __init__.py  citations.py
ai-research-copilot/backend/app/rag/embeddings/: __init__.py  embedder.py
ai-research-copilot/backend/app/rag/generator/: __init__.py  generator.py
ai-research-copilot/backend/app/rag/loaders/: __init__.py  base.py  csv_loader.py  docx_loader.py  html_loader.py  pdf_loader.py  pptx_loader.py  text_loader.py  web_loader.py  youtube_loader.py
ai-research-copilot/backend/app/rag/reranker/: __init__.py  cross_encoder.py
ai-research-copilot/backend/app/rag/retriever/: __init__.py  retriever.py
ai-research-copilot/backend/app/repositories/: __init__.py  analytics.py  base.py  conversation.py  document.py  knowledge_base.py  memory.py  message.py  task.py  user.py  workflow.py
ai-research-copilot/backend/app/routers/: __init__.py  admin.py  agent_platform.py  agent_ws.py  agents.py  analytics.py  auth.py  chat.py  documents.py  knowledge_bases.py  memory.py  public_stats.py  settings.py  tasks.py  usage_analytics.py  users.py  workflows.py
ai-research-copilot/backend/app/schemas/: __init__.py  agent.py  agent_platform.py  analytics.py  auth.py  chat.py  common.py  document.py  knowledge_base.py  memory.py  task.py  user.py  workflow.py
ai-research-copilot/backend/app/services/: __init__.py  agent_platform_service.py  agent_service.py  analytics_service.py  auth_service.py  chat_service.py  document_service.py  knowledge_base_service.py  memory_service.py  oauth_service.py  task_service.py  usage_tracking_service.py  user_service.py  workflow_service.py
ai-research-copilot/backend/app/storage/: __init__.py
ai-research-copilot/backend/app/tasks/: __init__.py
ai-research-copilot/backend/app/workflows/: __init__.py
ai-research-copilot/backend/scripts/: seed_agents.py  seed_all.py
(+509 files in other folders)
