[build-system]
requires = ["poetry-core>=1.8.0"]
build = "poetry.core.masonry.api"

[project]
name = "ai-research-copilot-backend"
version = "1.0.0"
description = "Enterprise Agentic AI Research Copilot Backend"
authors = [{name = "AI Research Copilot Team", email = "team@airesearchcopilot.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
keywords = ["ai", "research", "copilot", "agentic", "rag", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]

[project.dependencies]
# Core Framework
fastapi = "^0.115.0"
uvicorn = {version = "^0.32.0", extras = ["standard"]}
pydantic = "^2.10.0"

# Database
sqlalchemy = {version = "^2.0.36", extras = ["asyncio"]}
asyncpg = "^0.30.0"
alembic = "^1.14.0"

# Cache & Message Queue
redis = {version = "^5.2.0", extras = ["asyncio"]}
celery = {version = "^5.4.0", extras = ["redis"]}

# Authentication
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.18"

# AI & ML
langchain = "^0.3.15"
langgraph = "^0.2.53"
llama-index = "^0.12.10"
openai = "^1.59.0"
anthropic = "^0.42.0"
google-generativeai = "^0.8.0"
sentence-transformers = "^3.3.0"
transformers = "^4.47.0"
torch = "^2.5.0"

# Vector Database
qdrant-client = "^1.12.0"

# MCP Support
mcp = "^1.2.0"

# HTTP & API
httpx = "^0.27.0"
aiohttp = "^3.11.0"
requests = "^2.32.0"

# Document Processing
PyPDF2 = "^3.17.0"
python-docx = "^1.17.0"
python-pptx = "^0.3.9"
unstructured = {version = "^0.16.0", extras = ["all-docs"]}
pillow = "^11.0.0"
pytesseract = "^0.3.13"
markdown = "^3.7.0"
beautifulsoup4 = "^4.12.0"
youtube-transcript-api = "^0.6.21"

# Data Analysis
pandas = "^2.2.0"
numpy = "^2.2.0"
openpyxl = "^3.1.0"
scipy = "^1.15.0"

# Observability
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-exporter-otlp = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
structlog = "^24.5.0"

# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"

# Utils
python-dotenv = "^1.0.0"
pydantic-settings = "^2.6.0"
psutil = "^6.1.0"
orjson = "^3.10.0"
python-magic = "^0.4.27"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
    "pre-commit",
    "ipython",
    "jupyter",
]

[tool.poetry]
packages = [{include = "app", from = "backend"}]

[tool.black]
line-length = 120
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["backend/app"]
omit = ["*/tests/*", "*/__init__.py"]